Fix another bug on mobile view

--- a/css/home_style.css
+++ b/css/home_style.css
@@ -143,7 +143,7 @@ html {
 .photo_img {
   width: 100%;
   height: 80%;
-  background-image: url("/media/chesar_studio.jpeg");
+  background-image: url("media/chesar_studio.jpeg");
   background-size: cover;
 }
 
